<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/proserv_logo" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/username_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="286dp"
        android:layout_height="69dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="300dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="286dp"
        android:layout_height="67dp"
        android:layout_marginTop="4dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_layout">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/slastName"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="427dp" />

    </com.google.android.material.textfield.TextInputLayout>




    <CheckBox
        android:id="@+id/checkbox_facilitator"
        android:layout_width="180dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:text="Facilitator ?"

        app:layout_constraintEnd_toEndOf="@+id/password_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/studentNo_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="128dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_facilitator">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/student_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/studentNumber"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="427dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/employee_no"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="128dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_facilitator">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/employeeNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/employeeNumber"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="427dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerDemographics"
        android:layout_width="175dp"
        android:layout_height="67dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="48dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>