<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemographicRegistrationActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="339dp"
        app:layout_constraintBottom_toTopOf="@+id/employee_no_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/proserv_logo" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/username_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="286dp"
        android:layout_height="69dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="300dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="286dp"
        android:layout_height="67dp"
        android:layout_marginTop="4dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_layout">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/slastName"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="427dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/checkbox_facilitator"
        android:layout_width="180dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:text="Facilitator ?"

        app:layout_constraintEnd_toEndOf="@+id/password_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />


    <Button
        android:id="@+id/registerDemographics"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="175dp"
        android:layout_height="67dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="48dp"

        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_layout" />

    <Spinner
        android:id="@+id/student_number_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:prompt="@string/student_number"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/employee_no_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/employee_no_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:prompt="@string/student_number"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="131dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_number_spinner"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>